TheKabal (10 November 2013)
--------------------------------------
mt_rand is not the best source for strong random numbers. Where available, we now use either openssl or mcrypt as rand sources. If they aren't we fall back to mt_rand.
Fixes for standalone CSS throughout the game - All pages now pull the correct CSS for their page

TheKabal (27 October 2013)
--------------------------------------
Removed dozens of global variables that were not needed any more
Moved all instances of $local_number_dec_point and $local_number_thousands_sep to be pulled from $langvars, regional
Removed local_number_dec_point and local_number_thousands_sep from config - less variables, yay!
Cleaned up assorted PHP warnings and glitches

TheKabal (10 October 2013)
--------------------------------------
BntDb::logDbErrors replaces DbOp::dbResult

TheKabal (10 October 2013)
--------------------------------------
Moving images into templates

TheKabal (6 October 2013)
--------------------------------------
All check login calls need the template to be passed to it, or else "you need to login" display is broken
Redo "header.php" to also be template driven, to be used until a file is switched to use layout.tpl
Redo "footer.php" to also be template driven, to be used until a file is switched to use template with layout.tpl

TheMightyDude (05 October 2013)
--------------------------------------
Fixed issue in rsmove.php due to change in revision 3018, we validate this more correctly now.
Fixed bug in preset.php where it accept the last sector, we also validate this more correctly now as well, however room for improvement.
Got fed up with BntTranslate::load(...) replacing/overriding language variables when called in other functions or files.

TheMightyDude (23 September 2013)
--------------------------------------
Fixed bug in BntDb::initDb(...) where it had the database name argument missing.
Fixed issue in BntDb::initDb(...) when using ADOdb's postgres driver when postgres isn't installed.